--- a/public/assets/stylesheets/header.scss
+++ b/public/assets/stylesheets/header.scss
@@ -69,7 +69,7 @@ header {
 
 .header-spacer {
   width: 100%;
-  height: 90px;
+  height: 80px;
 }
 
 
