--- a/public/assets/stylesheets/main.scss
+++ b/public/assets/stylesheets/main.scss
@@ -3,7 +3,7 @@ main {
   flex-direction: column;
   align-items: center;
   height: 100%;
-  width: 100%;
-  margin: 25px 15px 0 15px;
+  width: 100vw;
+  margin-top: 35px;
   box-sizing: border-box;
 }
