--- a/public/assets/stylesheets/reset.scss
+++ b/public/assets/stylesheets/reset.scss
@@ -1,8 +1,3 @@
-// html, body {
-//   visibility: visible;
-//   height: 100%;
-//   line-height: 1;
-// }
 
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
@@ -23,6 +18,10 @@ time, mark, audio, video {
   font-size: 100%;
   font: inherit;
   vertical-align: baseline;
+}
+html, body {
+  height: 100%;
+  line-height: 1;
 }
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure,
